force-app/commons/logger/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <label>Log</label>
    <nameField>
        <displayFormat>LOG-{YYYY}/{MM}/{DD} - {0000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>