force-app/commons/logger/objects/Log__c/fields/Outbound__c.field-meta.xml
<CustomField>
    <fullName>Outbound__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is callout Outbound (checked) or Inbound</inlineHelpText>
    <label>Outbound</label>
    <type>Checkbox</type>
</CustomField>