force-app/commons/logger/objects/Log__c/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <description>Method parameters</description>
    <label>Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>