force-app/commons/logger/objects/Log__c/fields/Quiddity__c.field-meta.xml
<CustomField>
    <fullName>Quiddity__c</fullName>
    <label>Quiddity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ANONYMOUS</fullName>
            </value>
            <value>
                <fullName>AURA</fullName>
            </value>
            <value>
                <fullName>BATCH_ACS</fullName>
            </value>
            <value>
                <fullName>BATCH_APEX</fullName>
            </value>
            <value>
                <fullName>BATCH_CHUNK_PARALLEL</fullName>
            </value>
            <value>
                <fullName>BATCH_CHUNK_SERIAL</fullName>
            </value>
            <value>
                <fullName>BULK_API</fullName>
            </value>
            <value>
                <fullName>COMMERCE_INTEGRATION</fullName>
            </value>
            <value>
                <fullName>DISCOVERABLE_LOGIN</fullName>
            </value>
            <value>
                <fullName>EXTERNAL_SERVICE_CALLBACK</fullName>
            </value>
            <value>
                <fullName>FUNCTION_CALLBACK</fullName>
            </value>
            <value>
                <fullName>FUTURE</fullName>
            </value>
            <value>
                <fullName>INBOUND_EMAIL_SERVICE</fullName>
            </value>
            <value>
                <fullName>INVOCABLE_ACTION</fullName>
            </value>
            <value>
                <fullName>IOT</fullName>
            </value>
            <value>
                <fullName>PLATFORM_EVENT_PUBLISH_CALLBACK</fullName>
            </value>
            <value>
                <fullName>POST_INSTALL_SCRIPT</fullName>
            </value>
            <value>
                <fullName>QUEUEABLE</fullName>
            </value>
            <value>
                <fullName>QUICK_ACTION</fullName>
            </value>
            <value>
                <fullName>REMOTE_ACTION</fullName>
            </value>
            <value>
                <fullName>REST</fullName>
            </value>
            <value>
                <fullName>RUNTEST_ASYNC</fullName>
            </value>
            <value>
                <fullName>RUNTEST_DEPLOY</fullName>
            </value>
            <value>
                <fullName>RUNTEST_SYNC</fullName>
            </value>
            <value>
                <fullName>SCHEDULED</fullName>
            </value>
            <value>
                <fullName>SOAP</fullName>
            </value>
            <value>
                <fullName>SYNCHRONOUS</fullName>
            </value>
            <value>
                <fullName>TRANSACTION_FINALIZER_QUEUEABLE</fullName>
            </value>
            <value>
                <fullName>TRANSACTION_SECURITY_POLICY</fullName>
            </value>
            <value>
                <fullName>UNDEFINED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>