force-app/commons/logger/objects/Log__c/recordTypes/ApplicationLog.recordType-meta.xml
<RecordType>
    <fullName>ApplicationLog</fullName>
    <active>true</active>
    <label>Application Log</label>
</RecordType>