force-app/commons/logger/objects/Log__c/recordTypes/CalloutLog.recordType-meta.xml
<RecordType>
    <fullName>CalloutLog</fullName>
    <active>true</active>
    <label>Callout Log</label>
</RecordType>