force-app/commons/logger/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Severity__c</columns>
    <columns>Source__c</columns>
    <columns>ReferenceId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>User__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>